# typesafe-remix-codemod

./: .gitmodules  Cargo.toml  README.md
remix-app/: package.json  vite.config.ts
remix-app/app/routes/: .ignored.tsx  _index.tsx  splat.$.tsx  users.$userId.$postId.tsx  users.$userId.tsx
src/: codemod.rs  codemod_models.rs  fixer.rs  main.rs  utils.rs
src/snapshots/: component_action.snap  component_arrow_function.snap  component_arrow_function_expression.snap  component_client_loader_hydrate.snap  component_function_anonymous.snap  component_function_named.snap  component_loader.snap  component_loader_action.snap  component_loader_binding_assignment.snap  component_loader_binding_identifier.snap  component_loader_binding_identifier_rest.snap  kitchen_sink.snap  loader_arrow_function.snap  loader_arrow_function_args.snap  loader_arrow_function_async.snap  loader_arrow_function_expression.snap  loader_arrow_function_expression_args.snap  loader_arrow_function_expression_async.snap  loader_function_named.snap  loader_function_named_args.snap  loader_function_named_async.snap  mix_loader_unrelated_function_args.snap  multiple_components.snap  unrelated_function_args.snap
